# src/models/upload_certificate.go
@@ -33,3 +33,9 @@ type VerifyURLRequest struct {
 	StudentID string `query:"studentId" example:"685abb936c4acf57c7e2e6ee"`
 	CourseID  string `query:"courseId" example:"6890a82eebc423e6aeb56057"`
 }
+
+type UploadCertificateQuery struct {
+	PaginationParams
+	StudentID string `query:"studentId" example:"685abb936c4acf57c7e2e6ee"`
+	CourseID  string `query:"courseId" example:"6890a82eebc423e6aeb56057"`
+}
